--- a/views/output_view.erb
+++ b/views/output_view.erb
@@ -1,1 +1,6 @@
-<%=@piglatinizer.to_pig_latin(@text)%>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <body>
+    <p> <%= @output %> </p.
+  </body>
+</html>
